# ptmp

./: .gitignore  Cargo.toml  README.Md  justfile
.github/workflows/: release.yml
src/: cli.rs  commands.rs  components.rs  main.rs  manifest.rs  render.rs  templates.rs
src/templates/: CITATION.cff  Makefile  Project.toml  Taskfile.yml  editorconfig  example.R  example.jl  example.slurm  fields.toml  gitignore  main.tex  readme.md  references.bib  report.qmd  reveal-theme.scss  slides.qmd
